--- a/config
+++ b/config
@@ -69,10 +69,10 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-#bindsym $mod+a focus parent
+bindsym $mod+w focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+e focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -108,14 +108,20 @@ bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        output DVI-I-1
         status_command ~/.i3/conky
 	position top
 }
 
 workspace 1 output DVI-D-0
-workspace 2 output DVI-I-1
-workspace 3 output DP-0
+workspace 2 output DVI-D-0
+workspace 3 output DVI-D-0
+workspace 4 output DVI-I-1
+workspace 5 output DVI-I-1
+workspace 6 output DVI-I-1
+workspace 7 output DP-0
+workspace 8 output DP-0
+workspace 9 output DP-0
+workspace 0 output HDMI-0
 
 bindsym $mod+Shift+a move container to output DVI-D-0
 bindsym $mod+Shift+s move container to output DVI-I-1
@@ -126,10 +132,13 @@ bindsym $mod+s focus output DVI-I-1
 bindsym $mod+d focus output DP-0
 
 #for_window [class="chromium"] title none
-for_window [class="^chromium$" title=" - Chromium$"] border none
+for_window [class="Chromium" title="Chromium"] border none
 #hide_edge_borders both
 #new_window pixel 5
 #new_float normal
 
 bindsym $mod+Shift+j resize grow width 10 px or 10 ppt
 bindsym $mod+Shift+k resize shrink width 10 px or 10 ppt
+
+bindsym $mod+Ctrl+Up focus parent
+bindsym $mod+Ctrl+Down focus child
